# grib2sqlite

./: .gitignore  README.md  pyproject.toml
grib2sqlite/: __init__.py  __main__.py  grib2sqlite.py
grib2sqlite/data/: param_list_default.json  station_list_default.csv
