[tool.poetry]
name = "grib2sqlite"
version = "0.0.5"
description = "Extract/interpolate GRIB data to SQLite for verification in harp."
authors = ["Alex Deckmyn <alex.deckmyn@meteo.be>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
eccodes = "*"
pandas = "*"
pyproj = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
